{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 11,
  "lineage": "ce1a7704-e664-5ea4-84e5-17f0657ede44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:805023282421:loadbalancer/test-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "test-elb-2062231338.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "http:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "test-elb",
            "idle_timeout": 400,
            "instances": [
              "i-01a0f9dbf81054ce9",
              "i-0647a1b7a850a44d4"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "test-elb",
            "security_groups": [
              "sg-0d49f0d1dddb34dc3"
            ],
            "source_security_group": "805023282421/test",
            "source_security_group_id": "sg-0d49f0d1dddb34dc3",
            "subnets": [
              "subnet-00801813ce60e1e3b"
            ],
            "tags": {
              "Name": "TestApp-terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.test1",
            "aws_instance.test2",
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026c8acd92718196b",
            "arn": "arn:aws:ec2:us-east-1:805023282421:instance/i-0647a1b7a850a44d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0647a1b7a850a44d4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformtest",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a617276876e672f7",
            "private_dns": "ip-10-0-0-76.ec2.internal",
            "private_ip": "10.0.0.76",
            "public_ip": "3.80.175.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03b974cb144596784",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00801813ce60e1e3b",
            "tags": {
              "name": "test1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d49f0d1dddb34dc3"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026c8acd92718196b",
            "arn": "arn:aws:ec2:us-east-1:805023282421:instance/i-01a0f9dbf81054ce9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01a0f9dbf81054ce9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformtest",
            "monitoring": false,
            "primary_network_interface_id": "eni-071fa00e67afd04b4",
            "private_dns": "ip-10-0-0-97.ec2.internal",
            "private_ip": "10.0.0.97",
            "public_ip": "34.228.221.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0deb21d7d6e5db6da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00801813ce60e1e3b",
            "tags": {
              "name": "test2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d49f0d1dddb34dc3"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03e94bad8a434db76",
            "owner_id": "805023282421",
            "vpc_id": "vpc-015fc176643cd562d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dcc68050a71b7a75",
            "owner_id": "805023282421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e94bad8a434db76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public"
            },
            "vpc_id": "vpc-015fc176643cd562d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0214108307fb9b9b8",
            "route_table_id": "rtb-0dcc68050a71b7a75",
            "subnet_id": "subnet-00801813ce60e1e3b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805023282421:security-group/sg-0d49f0d1dddb34dc3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d49f0d1dddb34dc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test",
            "name_prefix": null,
            "owner_id": "805023282421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TESTSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-015fc176643cd562d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805023282421:subnet/subnet-00801813ce60e1e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00801813ce60e1e3b",
            "map_public_ip_on_launch": true,
            "owner_id": "805023282421",
            "tags": {
              "name": "public"
            },
            "vpc_id": "vpc-015fc176643cd562d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805023282421:vpc/vpc-015fc176643cd562d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03063694f736a3bfa",
            "default_route_table_id": "rtb-0a9b40c90fc691c5b",
            "default_security_group_id": "sg-0a90c8ef7b6bb7299",
            "dhcp_options_id": "dopt-ddec2da7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-015fc176643cd562d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9b40c90fc691c5b",
            "owner_id": "805023282421",
            "tags": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}